...
typealias AllowEntryVehicleCompletion = ( (_ response: Result<Any, AllowEntryVehicleErrors>) -> Void )

class AllowEntryVehicle {
    let vehiclesRepository: VehiclesRepository
    
    // MARK: Messages
    let vehicleAdded = "Vehicle parked succesfully."

    init(withRepository vehiclesRepository: VehiclesRepository) {
        self.vehiclesRepository = vehiclesRepository
    }
    
    func execute(_ vehicle: Vehicle, completion: @escaping AllowEntryVehicleCompletion) {
...
